hard-gists/780379/run.log
=== Docker Run Log for 780379 ===
Started at: Mi 29. Okt 17:18:27 CET 2025

[2025-10-29 17:18:27] START: Running container for 780379
[2025-10-29 17:18:28] SUCCESS: Container 6bb442162344c055c136b4527c42392568d57abf0d05dfe2ba571c9d4351eac7 started for 780379
=== Container logs for 780379 ===
  File "/snippet.py", line 44
    print "Checking " + service + " (" + url + ")..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 780379 ===
[2025-10-29 17:18:30] INFO: Container 6bb442162344c055c136b4527c42392568d57abf0d05dfe2ba571c9d4351eac7 has stopped
